--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -1,6 +1,8 @@
 @use "../mixins";
 
 .services {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -11,18 +13,47 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  padding: 77px 0;
-
   @include mixins.respond-to(notDesktop) {
     min-height: auto;
+  }
 
-    padding: 50px 0;
+  &__graphic-canvas {
+    position: absolute;
+
+    display: block;
+
+    height: 100% !important;
+
+    z-index: 1;
+
+    @include mixins.respond-to(notDesktop) {
+      display: none;
+    }
+  }
+
+  &__canvas-layout {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+    background-color: #1d707a;
+    opacity: 80%;
+
+    z-index: 2;
   }
 
   &__container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+
+    padding: 77px 0 0 0;
+
+    z-index: 3;
+
+    @include mixins.respond-to(notDesktop) {
+      padding: 50px 0 0 0;
+    }
   }
 
   &__title {
@@ -46,7 +77,14 @@
     width: 90%;
     overflow: visible !important;
 
+    padding: 0 0 77px 0;
     margin: 0 auto;
+
+    z-index: 3;
+
+    @include mixins.respond-to(notDesktop) {
+      padding: 0 0 50px 0;
+    }
 
     @include mixins.respond-to(desktopM) {
       width: 1296px;
