--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -44,16 +44,16 @@
 
           <ul class="main-nav__nav-list base-list">
             <li class="main-nav__nav-item">
-              <a class="main-nav__nav-link base-link" href="#about">О нас</a>
+              <a class="main-nav__nav-link base-link" href="#about">Sobre nós</a>
             </li>
             <li class="main-nav__nav-item">
-              <a class="main-nav__nav-link base-link" href="#services">Услуги</a>
+              <a class="main-nav__nav-link base-link" href="#services">Projetos</a>
             </li>
             <li class="main-nav__nav-item">
-              <a class="main-nav__nav-link base-link" href="#projects">Проекты</a>
+              <a class="main-nav__nav-link base-link" href="#projects">Serviços</a>
             </li>
             <li class="main-nav__nav-item">
-              <a class="main-nav__nav-link base-link" href="#contacts">Контакты</a>
+              <a class="main-nav__nav-link base-link" href="#contacts">Contactos</a>
             </li>
           </ul>
 
@@ -71,10 +71,10 @@
               <svg class="main-nav__phone-icon" width="16" height="16" aria-hidden="true">
                 <use href="img/icon/sprite.svg#phone-icon"></use>
               </svg>
-              <span class="main-nav__phone-text">915 855 963</span>
+              <span class="main-nav__phone-text">+351 91 596 38 55</span>
             </a>
 
-            <button class="main-nav__callback callback-button base-button" type="button" id="callback_modal_button">Заказать звонок</button>
+            <button class="main-nav__callback callback-button base-button" type="button" id="callback_modal_button">Pedir uma chamada</button>
           </div>
 
         </div>
