--- a/src/scss/blocks/callback-button.scss
+++ b/src/scss/blocks/callback-button.scss
@@ -5,7 +5,8 @@
   align-items: center;
   justify-content: center;
 
-  width: 167px;
+  width: 100%;
+  max-width: 167px;
   height: 46px;
   background: var(--color-white);
   border-radius: 3px;
