--- a/src/scss/blocks/socials.scss
+++ b/src/scss/blocks/socials.scss
@@ -12,6 +12,10 @@
 
     margin: 0 9px 0 0;
 
+    &:last-child {
+      margin: 0;
+    }
+
     &:hover {
       transform: translateY(-5px);
       transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
