--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -106,6 +106,10 @@
 
     margin: 0 41px 0 0;
 
+    @include mixins.respond-to(desktopDOnly) {
+      margin: 0 10px 0 0;
+    }
+
     &:hover {
       transform: scale(1.1);
       transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -134,13 +138,13 @@
     display: flex;
     align-items: center;
 
-    @include mixins.respond-to(desktopD) {
-      margin: 0 40px 0 0;
-    }
+    // @include mixins.respond-to(desktopD) {
+    //   margin: 0 40px 0 0;
+    // }
 
-    @include mixins.respond-to(desktopM) {
-      margin: 0 116px 0 0;
-    }
+    // @include mixins.respond-to(desktopM) {
+    //   margin: 0 116px 0 0;
+    // }
 
     @include mixins.respond-to(notDesktop) {
       position: relative;
@@ -197,17 +201,26 @@
       text-transform: uppercase;
       text-align: left;
     }
+
+    @include mixins.respond-to(desktopDOnly) {
+      font-size: 14px;
+    }
   }
 
   &__nav-side {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 
     @include mixins.respond-to(notDesktop) {
       flex-direction: column;
       align-items: flex-start;
 
       margin: auto 0 0 0;
+    }
+
+    @include mixins.respond-to(desktopM) {
+      width: 100%;
     }
 
     & .socials {
@@ -251,6 +264,10 @@
       // & span {
       //   display: none;
       // }
+    }
+
+    @include mixins.respond-to(desktopDOnly) {
+      font-size: 14px;
     }
 
     & span {
@@ -319,6 +336,10 @@
       line-height: 30px;
       color: var(--color-white);
       white-space: nowrap;
+
+      @include mixins.respond-to(desktopDOnly) {
+        font-size: 14px;
+      }
     }
   }
 
@@ -439,5 +460,11 @@
 
     transition-delay: 0.4s;
     transition: background-color 0.1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  }
+
+  &__callback {
+    @include mixins.respond-to(desktopDOnly) {
+      font-size: 14px;
+    }
   }
 }
